syntax = "proto3";

package groups;
option go_package = "github.com/scardozos/esplai-planning/api/grpc/groups/;groups";

service Groups {
    rpc GetGroupPlaces (DateRequest) returns (GroupsPlacesResponse);
} 

message DateRequest {
    Date date = 1;
} 
message Date {
    int32 year = 1;
    int32 month = 2;
    int32 day = 3;
}
message Place {
    string place_name = 1;
}

message Group {
    string group_name = 1;
    Place group_place = 2;
}

message GroupsPlacesResponse {
    repeated Group groups = 1; 
    Date requested_saturday = 2;
}